--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
+        "build:production": "vite build --config vite.config.production.js",
         "preview": "vite preview"
     },
     "devDependencies": {
